--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -7,14 +7,45 @@
   display: none;
 }
 
-header {
-  background-color: black;
-  display: grid;
+.header-background {
+  /* background-color: black; */
+  /* display: grid; */
   font-size: 20px;
-  grid-template-columns: 20% 80%;
-  padding: 40px;
+  /* grid-template-columns: 20% 80%; */
+  padding: 10px 40px;
+  background: linear-gradient(rgba(0, 0, 0, 0.8), transparent),
+  url("../../imagenes/desktop/ancash-huaraz.jpg");
+  background-position: center center;
+  background-repeat: none;
+  background-size: cover;
+  color: black;
+  height: 80vh;
 
-  color: white;
+  .header-container-fotoTitulo{
+    padding-top: 10vh;
+
+    .header-background-foto{
+      margin: auto;
+      text-align: center;
+      
+  
+      .header-foto{
+        width: 200px;
+      }
+    
+      
+    }
+    .header-titulos{
+      text-align: center;
+      color: white;
+  
+      h1{
+        color: rgb(217,105,89);
+      }
+    }
+  }
+  
+
 
   .header-info-portfolio {
     margin: auto 0;
@@ -38,11 +69,16 @@ header {
         &:hover {
           background: linear-gradient(45deg, red, #800000, #400000, black);
           border-radius: 8px;
-          
+
         }
       }
     }
   }
+
+
+
+
+
 
   .header-nombre-portfolio {
     padding-right: 20px;
@@ -59,7 +95,9 @@ header {
       }
     }
   }
+
 }
+
 
 .todo-el-contenido {
   background-color: rgba(26, 26, 26, 1);
@@ -245,7 +283,7 @@ header {
             margin: 0;
             font-weight: 900;
             cursor: pointer;
-    
+
             &:hover {
               opacity: 0.7;
             }
@@ -442,7 +480,8 @@ header {
     .sobreMi-container,
     .portfolio-container,
     .contacto-container,
-    .idiomas-mobile, .portfolio-container-mobile {
+    .idiomas-mobile,
+    .portfolio-container-mobile {
       text-align: center;
       padding: 50px 0;
       float: none;
@@ -549,7 +588,8 @@ header {
 
     .estudios,
     .estudios-especializaciones,
-    .idiomas-desktop, .portfolio-container-mobile {
+    .idiomas-desktop,
+    .portfolio-container-mobile {
       p {
         padding: 0 50px;
         font-size: 18px;
@@ -578,10 +618,10 @@ header {
     .portfolio-container-mobile {
       display: block;
 
-      .carousel-inner{
+      .carousel-inner {
         padding: 50px;
 
-        .card{
+        .card {
           background-color: gray;
           height: 300px;
 
@@ -597,7 +637,7 @@ header {
             margin: 0;
             font-weight: 900;
             cursor: pointer;
-    
+
             &:hover {
               opacity: 0.7;
             }
